--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "antd": "^5.0.1",
+    "axios": "^1.2.0",
     "d3": "^7.6.1",
     "flexlayout-react": "^0.7.4",
     "golden-layout": "^2.6.0",
