--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3": "^7.6.1",
     "flexlayout-react": "^0.7.4",
     "golden-layout": "^2.6.0",
+    "lineupjs": "^4.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
