--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "d3": "^7.6.1",
     "flexlayout-react": "^0.7.4",
     "golden-layout": "^2.6.0",
-    "lineupjs": "^4.6.0",
+    "lineupjs": "^4.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@types/d3": "^7.4.0",
