--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@antv/g6": "^4.7.16",
+    "@reduxjs/toolkit": "^1.9.1",
     "antd": "^5.0.1",
     "axios": "^1.2.0",
     "d3": "^7.6.1",
@@ -30,6 +32,7 @@
     "@zougt/vite-plugin-theme-preprocessor": "^1.4.6",
     "color": "^4.2.3",
     "less": "^4.1.3",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.56.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
