--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "flexlayout-react": "^0.7.4",
     "golden-layout": "^2.6.0",
     "lineupjs": "^4.7.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
